--- a/introduction.mdx
+++ b/introduction.mdx
@@ -24,7 +24,7 @@ Fossapay is the banking infrastructure platform that enables neobanks and fintec
 
 Fossapay provides a complete banking infrastructure through a single API, allowing you to:
 
-- **Issue Virtual Accounts** - Create and assign fiat virtual accounts on demand for your customers
+- **Create Fiat Wallets** - Create and assign fiat wallets on demand for your customers
 - **Manage Payments** - Accept collections and send payouts seamlessly
 - **Instant Settlements** - Settle transactions in real-time in fiat or stablecoins
 - **Build Wallets** - Create customer wallets with multi-currency support
@@ -82,16 +82,9 @@ Whether you're building a digital bank, a payment platform, or a fintech product
   <Card
     title="API Reference"
     icon="code"
-    href="/api-reference/collections/create-virtual-account"
+    href="/api-reference/virtual-account/create-wallet"
   >
     Explore our comprehensive API documentation
-  </Card>
-  <Card
-    title="Sandbox Access"
-    icon="flask"
-    href="/sandbox"
-  >
-    Test your integration in our sandbox environment
   </Card>
   <Card
     title="White-Label Solution"
@@ -105,7 +98,7 @@ Whether you're building a digital bank, a payment platform, or a fintech product
 ## Core Features
 
 ### Collections API
-Accept payments through virtual accounts or wallets with instant webhook notifications on every transaction.
+Accept payments through fiat wallets with instant webhook notifications on every transaction.
 
 ### Payouts API
 Send funds to any Nigerian bank account in seconds. Support for single and bulk disbursements with automated processing.
