--- a/api-reference/crypto-transfers/crypto-transfer.mdx
+++ b/api-reference/crypto-transfers/crypto-transfer.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Crypto Transfer'
-api: 'POST https://api-staging.fossapay.com/v1/transfers/crypto'
+api: 'POST https://api-staging.fossapay.com/api/v1/transfers/crypto'
 description: 'Make crypto transfer in USDT and USDC'
 ---
 
@@ -33,7 +33,7 @@ description: 'Make crypto transfer in USDT and USDC'
 ### Request Example
 
 ```bash
-curl -X POST https://api-staging.fossapay.com/v1/transfers/crypto \
+curl -X POST https://api-staging.fossapay.com/api/v1/transfers/crypto \
   -H "x-api-key: your_api_key_here" \
   -H "Content-Type: application/json" \
   -d '{
