--- a/api-reference/crypto-wallets/get-balance.mdx
+++ b/api-reference/crypto-wallets/get-balance.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Get Wallet Balance'
-api: 'GET https://api-staging.fossapay.com/v1/wallets/{wallet_id}/balance'
+api: 'GET https://api-staging.fossapay.com/api/v1/wallets/{wallet_id}/balance'
 description: 'Retrieve wallet balance'
 ---
 
@@ -19,7 +19,7 @@ description: 'Retrieve wallet balance'
 ## Request Example
 
 ```bash
-curl "https://api-staging.fossapay.com/v1/wallets/wal_abc123/balance?currency=NGN" \
+curl "https://api-staging.fossapay.com/api/v1/wallets/wal_abc123/balance?currency=NGN" \
   -H "Authorization: Bearer fp_live_sk_xxxxxxxx"
 ```
 
