--- a/api-reference/crypto-wallets/get-wallet-by-id.mdx
+++ b/api-reference/crypto-wallets/get-wallet-by-id.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Get Wallet by ID'
-api: 'GET https://api-staging.fossapay.com/v1/wallets/crypto/{walletId}'
+api: 'GET https://api-staging.fossapay.com/api/v1/wallets/crypto/{walletId}'
 description: 'Retrieve crypto wallet details by wallet ID'
 ---
 
@@ -19,7 +19,7 @@ description: 'Retrieve crypto wallet details by wallet ID'
 ## Request Example
 
 ```bash
-curl -X GET https://api-staging.fossapay.com/v1/wallets/crypto/user:u3d \
+curl -X GET https://api-staging.fossapay.com/api/v1/wallets/crypto/user:u3d \
   -H "x-api-key: your_api_key_here"
 ```
 
